css and styling changes

--- a/less/arrowbuttons.less
+++ b/less/arrowbuttons.less
@@ -12,7 +12,6 @@
   .g4u-arrowbuttons {
     width: 2 * @g4u-desktop-padding + 3 * @g4u-desktop-button-size;
     height: 2 * @g4u-desktop-padding + 3 * @g4u-desktop-button-size;
-    border-radius: @g4u-desktop-large-border-radius;
 
     button {
       .g4u-symbol-colors;
@@ -23,8 +22,8 @@
     .g4u-arrowbuttons-left {
       top: @g4u-desktop-padding + 1 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 2nd button row
       left: @g4u-desktop-padding + 0 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 1st button column
-      border-top-left-radius: @g4u-desktop-small-border-radius;
-      border-bottom-left-radius: @g4u-desktop-small-border-radius;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
       .buttonSquaredWithIcon(@g4u-arrowbutton-left-icon; @g4u-desktop-button-size; @g4u-desktop-huge-fontsize);
       position: absolute;
     }
@@ -32,8 +31,8 @@
     .g4u-arrowbuttons-right {
       top: @g4u-desktop-padding + 1 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 2nd button row
       left: @g4u-desktop-padding + 2 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 3rd button column
-      border-top-right-radius: @g4u-desktop-small-border-radius;
-      border-bottom-right-radius: @g4u-desktop-small-border-radius;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
       .buttonSquaredWithIcon(@g4u-arrowbutton-right-icon; @g4u-desktop-button-size; @g4u-desktop-huge-fontsize);
       position: absolute;
     }
@@ -41,8 +40,8 @@
     .g4u-arrowbuttons-up {
       top: @g4u-desktop-padding + 0 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 1st button row
       left: @g4u-desktop-padding + 1 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 2nd button column
-      border-top-left-radius: @g4u-desktop-small-border-radius;
-      border-top-right-radius: @g4u-desktop-small-border-radius;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
       .buttonSquaredWithIcon(@g4u-arrowbutton-up-icon; @g4u-desktop-button-size; @g4u-desktop-huge-fontsize);
       position: absolute;
     }
@@ -50,13 +49,14 @@
     .g4u-arrowbuttons-down {
       top: @g4u-desktop-padding + 2 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 3rd button row
       left: @g4u-desktop-padding + 1 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 2nd button column
-      border-bottom-left-radius: @g4u-desktop-small-border-radius;
-      border-bottom-right-radius: @g4u-desktop-small-border-radius;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
       .buttonSquaredWithIcon(@g4u-arrowbutton-down-icon; @g4u-desktop-button-size; @g4u-desktop-huge-fontsize);
       position: absolute;
     }
 
     .g4u-arrowbuttons-center {
+      border-radius: 0;
       top: @g4u-desktop-padding + 1 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 2nd button row
       left: @g4u-desktop-padding + 1 * (@g4u-desktop-button-size + @g4u-desktop-padding); // 2nd button column
       .buttonSquaredWithIcon(@g4u-arrowbutton-center-icon; @g4u-desktop-button-size; @g4u-desktop-huge-fontsize);
