--- a/less/attribution.less
+++ b/less/attribution.less
@@ -12,7 +12,6 @@
     cursor: default;
     margin: 0;
     padding: 0;
-    border-radius: @g4u-desktop-large-border-radius;
     white-space: nowrap;
 
     a {
@@ -28,8 +27,8 @@
       .buttonSquaredWithIcon(@g4u-attribution-collapse-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
       display: inline;
       background: fade(@g4u-dark-main-color, 80%);
-      border-top-left-radius: @g4u-desktop-small-border-radius;
-      border-bottom-left-radius: @g4u-desktop-small-border-radius;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
       &:hover {
         background: fade(@g4u-dark-main-color, 90%);
       }
@@ -42,8 +41,8 @@
       height: @g4u-desktop-button-size;
       padding: 0;
       margin: 0;
-      border-top-right-radius: @g4u-desktop-small-border-radius;
-      border-bottom-right-radius: @g4u-desktop-small-border-radius;
+      border-top-right-radius: @g4u-desktop-small-border-radius; // button to the left
+      border-bottom-right-radius: @g4u-desktop-small-border-radius; // button to the left
 
       li {
         border-left: @g4u-tiny solid;
