--- a/less/toolbox.less
+++ b/less/toolbox.less
@@ -10,6 +10,10 @@
       display: inline-block;
       padding-left: @g4u-desktop-padding;
       vertical-align: text-top;
+      border-radius: 0;
+      .g4u-control-mainbutton, > button {
+        border-radius: 0;
+      }
     }
 
     .g4u-toolbox-item-first {
