--- a/less/window.less
+++ b/less/window.less
@@ -79,8 +79,7 @@
     button.g4u-window-button-close {
       top: -@g4u-tiny; // @g4u-tiny for IE
       left: 0;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
+      border-radius: 0;
     }
   }
 }
