--- a/less/layermenu.less
+++ b/less/layermenu.less
@@ -25,8 +25,8 @@
       overflow: hidden;
       display: block;
 
-      &:not(:first-of-type) {
-        margin-top: @g4u-desktop-padding;
+      &:not(:last-of-type) {
+        margin-bottom: @g4u-desktop-padding;
       }
 
       * {
@@ -54,8 +54,8 @@
         overflow: hidden;
         display: block;
 
-        &:not(:first-of-type) {
-          margin-top: @g4u-mobile-padding;
+        &:not(:last-of-type) {
+          margin-bottom: @g4u-mobile-padding;
         }
       }
     }
