--- a/less/helpbutton.less
+++ b/less/helpbutton.less
@@ -57,7 +57,7 @@
     padding: 0;
 
     button.g4u-control-mainbutton {
-      .buttonSquaredWithIcon(@g4u-help-icon; @g4u-mobile-button-size; @g4u-mobile-button-size);
+      .buttonSquaredWithIcon(@g4u-help-icon; @g4u-mobile-button-size; @g4u-mobile-huge-fontsize + 12);
     }
 
     .g4u-helpbutton-table {
