Adjusted back button functionality for mobile view

--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -53,6 +53,11 @@
         color: white;
       }
     }
+
+    .g4u-active {
+      background: lighten(@g4u-medium-main-color, 10%);
+      color: white;
+    }
   }
 
   .g4u-dropdown-selected {
@@ -79,6 +84,11 @@
   .g4u-dropdown {
     display: block !important;
     width: 100%;
+
+    .g4u-active {
+      background: lighten(@g4u-medium-main-color, 10%);
+      color: white;
+    }
   }
 
   padding: 0;
