--- a/conf/full/clouds.less
+++ b/conf/full/clouds.less
@@ -1,3 +1,6 @@
+@g4u-symbol-fonts: Symbola,'Lucida Sans Unicode','Arial Unicode MS',sans-serif;
+@g4u-text-fonts: Verdana,Arial,sans-serif;
+
 @g4u-desktop-huge-fontsize: 16px;
 @g4u-mobile-huge-fontsize: 24px;
 
@@ -22,3 +25,4 @@
 @g4u-link-color: lighten(@g4u-medium-main-color, 10%);
 
 @g4u-text-color: white;
+
