dropdown box-sizing

--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -25,6 +25,7 @@
     }
 
     .g4u-dropdown-entry {
+      box-sizing: border-box;
       width: 100%;
       height: auto;
 
@@ -95,6 +96,7 @@
   margin: 0;
 
   .g4u-dropdown-entry {
+    box-sizing: border-box;
     height: auto;
     cursor: default;
     padding: @g4u-mobile-padding;
