adding exports.js and simplifying imports in less

--- a/less/attribution.less
+++ b/less/attribution.less
@@ -4,8 +4,8 @@
 @import "./tooltip";
 @import "./misc";
 
-@g4u-attribution-collapse-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand-outline-left.svg");
-@g4u-attribution-info-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/info.svg");
+@g4u-attribution-collapse-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand-outline-left.svg");
+@g4u-attribution-info-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/info.svg");
 
 .g4u-desktop {
   .g4u-attribution {
