--- a/less/geolocation.less
+++ b/less/geolocation.less
@@ -2,8 +2,8 @@
 @import "./controlgenerics";
 @import "./colors";
 
-@g4u-geolocation-icon-active: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/geolocation-active.svg");
-@g4u-geolocation-icon-inactive: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/geolocation-inactive.svg");
+@g4u-geolocation-icon-active: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/geolocation-active.svg");
+@g4u-geolocation-icon-inactive: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/geolocation-inactive.svg");
 
 .g4u-desktop {
   .g4u-geolocation {
