--- a/less/infobutton.less
+++ b/less/infobutton.less
@@ -2,7 +2,7 @@
 @import "./controlgenerics";
 @import "./colors";
 
-@g4u-info-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/info.svg");
+@g4u-info-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/info.svg");
 
 .g4u-infobutton-attributions {
   button {
