--- a/less/layermenu.less
+++ b/less/layermenu.less
@@ -2,7 +2,7 @@
 @import "./colors";
 @import "./controlgenerics";
 
-@g4u-layers-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/layers.svg");
+@g4u-layers-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/layers.svg");
 
 .g4u-desktop {
   .g4u-layermenu {
