--- a/less/printbutton.less
+++ b/less/printbutton.less
@@ -2,8 +2,8 @@
 @import "./colors";
 @import "./controlgenerics";
 
-@g4u-printbutton-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/print2.svg");
-@g4u-printbutton-blinking-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/print-animation.svg");
+@g4u-printbutton-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/print2.svg");
+@g4u-printbutton-blinking-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/print-animation.svg");
 
 .g4u-desktop {
   .g4u-printbutton.g4u-control-mainbutton {
