--- a/less/zoom.less
+++ b/less/zoom.less
@@ -3,8 +3,8 @@
 @import "./controlgenerics";
 @import "./misc";
 
-@g4u-zoom-in-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/plusminus-plus.svg");
-@g4u-zoom-out-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/plusminus-minus.svg");
+@g4u-zoom-in-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/plusminus-plus.svg");
+@g4u-zoom-out-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/plusminus-minus.svg");
 
 .g4u-desktop {
   .g4u-zoom {
