--- a/less/arrowbuttons.less
+++ b/less/arrowbuttons.less
@@ -2,11 +2,11 @@
 @import "./colors";
 @import "./controlgenerics";
 
-@g4u-arrowbutton-center-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-center.svg");
-@g4u-arrowbutton-down-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-down.svg");
-@g4u-arrowbutton-left-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-left.svg");
-@g4u-arrowbutton-right-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-right.svg");
-@g4u-arrowbutton-up-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-up.svg");
+@g4u-arrowbutton-center-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-center.svg");
+@g4u-arrowbutton-down-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-down.svg");
+@g4u-arrowbutton-left-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-left.svg");
+@g4u-arrowbutton-right-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-right.svg");
+@g4u-arrowbutton-up-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-up.svg");
 
 .g4u-desktop {
   .g4u-arrowbuttons {
