added findLayer method. some css.

--- a/less/mouseposition.less
+++ b/less/mouseposition.less
@@ -6,6 +6,9 @@
   .g4u-mouseposition {
     .g4u-desktop-text-padding;
     .g4u-symbol-colors;
+    .g4u-no-user-select;
+
+    cursor: default;
 
     height: @g4u-desktop-button-size - 2 * @g4u-desktop-padding;
     line-height: @g4u-desktop-button-size - 2 * @g4u-desktop-padding; // vertically aligns text in the middle
