--- a/less/linkbutton.less
+++ b/less/linkbutton.less
@@ -2,7 +2,7 @@
 @import "./controlgenerics";
 @import "./colors";
 
-@g4u-home-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/home.svg");
+@g4u-home-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/home.svg");
 
 .g4u-desktop {
   .g4u-link-button {
