--- a/less/measurement.less
+++ b/less/measurement.less
@@ -2,8 +2,8 @@
 @import "./controlgenerics";
 @import "./colors";
 
-@g4u-distance-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/ruler.svg");
-@g4u-area-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/area.svg");
+@g4u-distance-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/ruler.svg");
+@g4u-area-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/area.svg");
 
 .g4u-desktop {
   .g4u-distance-measurement {
