--- a/less/window.less
+++ b/less/window.less
@@ -3,7 +3,7 @@
 @import "./colors";
 @import "./misc";
 
-@g4u-window-close: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/close.svg");
+@g4u-window-close: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/close.svg");
 
 .g4u-desktop {
   .g4u-window {
