--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -2,12 +2,12 @@
 @import "./colors";
 @import "./controlgenerics";
 
-@g4u-layerselector-menu-collapsed-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/plusminus-plus.svg");
-@g4u-layerselector-menu-expanded-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/plusminus-minus.svg");
-@g4u-layerselector-group-collapsed-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand-outline-down.svg");
-@g4u-layerselector-group-expanded-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand-outline-right.svg");
-@g4u-whitespace-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/plusminus-nothing.svg");
-@g4u-load-animation: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/load-animation.svg");
+@g4u-layerselector-menu-collapsed-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-plus.svg");
+@g4u-layerselector-menu-expanded-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-minus.svg");
+@g4u-layerselector-group-collapsed-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/expand-outline-down.svg");
+@g4u-layerselector-group-expanded-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/expand-outline-right.svg");
+@g4u-whitespace-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-nothing.svg");
+@g4u-load-animation: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/load-animation.svg");
 
 .g4u-desktop {
   .g4u-layerselector.ol-unselectable.ol-control {
