--- a/less/overviewmap.less
+++ b/less/overviewmap.less
@@ -4,8 +4,8 @@
 @import "./misc";
 @import "./tooltip";
 
-@ol-overviewmap-collapse-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand-outline-bottom-right.svg");
-@ol-overviewmap-expand-icon: url("~mustache-eval-loader?name=images/[name].[ext]!../images/icons/globe.svg");
+@ol-overviewmap-collapse-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/expand-outline-bottom-right.svg");
+@ol-overviewmap-expand-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/globe.svg");
 
 .g4u-desktop {
   .ol-overviewmap {
