refactored LayerSelector#buildWMSButton

--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -168,6 +168,13 @@
       }
     }
   }
+
+  .g4u-layerselector-checkbox {
+    position: absolute;
+    left: @g4u-desktop-padding;
+    top: auto;
+    bottom: auto;
+  }
 }
 
 .g4u-mobile {
