active color indication

--- a/less/colors.less
+++ b/less/colors.less
@@ -65,9 +65,13 @@
 .g4u-layerselector-button-colors() {
     .g4u-layer-button-colors();
 }
+
 .g4u-symbol-colors() {
     color: @g4u-text-color;
     background: fade(@g4u-theme-main-background, @g4u-not-so-opaque);
+    &.g4u-active {
+        background-color: @g4u-darker-main-color;
+    }
 }
 
 .g4u-theme-main-link-colors() {
