--- a/less/colors.less
+++ b/less/colors.less
@@ -69,9 +69,10 @@
 .g4u-symbol-colors() {
     color: @g4u-text-color;
     background: fade(@g4u-theme-main-background, @g4u-not-so-opaque);
-    &.g4u-active {
-        background-color: @g4u-darker-main-color;
-    }
+}
+
+.g4u-symbol-active-color() {
+    background-color: @g4u-darker-main-color;
 }
 
 .g4u-theme-main-link-colors() {
