--- a/less/controlgenerics.less
+++ b/less/controlgenerics.less
@@ -23,6 +23,14 @@ button.ol-control,
   }
 }
 
+.g4u-active .g4u-control-mainbutton,
+button.g4u-active {
+  .g4u-symbol-active-color;
+  &:hover {
+    .g4u-symbol-active-color;
+  }
+}
+
 a.ol-control,
 .ol-control a {
   padding: 0;
