renamed controlgenerics to buttons

--- a/less/arrowbuttons.less
+++ b/less/arrowbuttons.less
@@ -1,6 +1,6 @@
 @import "./lengths";
 @import "./colors";
-@import "./controlgenerics";
+@import "./buttons";
 
 @g4u-arrowbutton-center-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/arrow-center.svg");
 @g4u-arrowbutton-down-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/arrow-down.svg");
