--- a/less/geolocation.less
+++ b/less/geolocation.less
@@ -1,5 +1,5 @@
 @import "./lengths";
-@import "./controlgenerics";
+@import "./buttons";
 @import "./colors";
 
 @g4u-geolocation-icon-active: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/geolocation-active.svg");
