--- a/less/layermenu.less
+++ b/less/layermenu.less
@@ -1,6 +1,6 @@
 @import "./lengths";
 @import "./colors";
-@import "./controlgenerics";
+@import "./buttons";
 
 @g4u-layers-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/layers.svg");
 
