--- a/less/mobilecontrols.less
+++ b/less/mobilecontrols.less
@@ -1,6 +1,6 @@
 @import "./lengths";
 @import "./colors";
-@import "./controlgenerics";
+@import "./buttons";
 
 .g4u-desktop {
   .g4u-mobilecontrols {
