--- a/less/overviewmap.less
+++ b/less/overviewmap.less
@@ -1,6 +1,6 @@
 @import "./lengths";
 @import "./colors";
-@import "./controlgenerics";
+@import "./buttons";
 @import "./misc";
 @import "./tooltip";
 
