--- a/less/printbutton.less
+++ b/less/printbutton.less
@@ -1,6 +1,6 @@
 @import "./lengths";
 @import "./colors";
-@import "./controlgenerics";
+@import "./buttons";
 
 @g4u-printbutton-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/print2.svg");
 @g4u-printbutton-blinking-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/print-animation.svg");
