--- a/less/helpbutton.less
+++ b/less/helpbutton.less
@@ -1,5 +1,5 @@
 @import "./lengths";
-@import "./controlgenerics";
+@import "./buttons";
 @import "./colors";
 
 @g4u-help-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/help.svg");
