--- a/less/infobutton.less
+++ b/less/infobutton.less
@@ -1,5 +1,5 @@
 @import "./lengths";
-@import "./controlgenerics";
+@import "./buttons";
 @import "./colors";
 
 @g4u-info-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/info.svg");
