--- a/less/singledrawbutton.less
+++ b/less/singledrawbutton.less
@@ -1,6 +1,6 @@
 @import "./lengths";
 @import "./colors";
-@import "./controlgenerics";
+@import "./buttons";
 
 @g4u-pencil-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/pencil.svg");
 
