--- a/less/zoom.less
+++ b/less/zoom.less
@@ -1,6 +1,6 @@
 ﻿@import "./lengths";
 @import "./colors";
-@import "./controlgenerics";
+@import "./buttons";
 @import "./misc";
 
 @g4u-zoom-in-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-plus.svg");
