wms layerselector button

--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -18,7 +18,9 @@
 
       button, .button {
         box-sizing: border-box;
-        width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
+        //width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
+        left: 0;
+        right: 0;
         padding-left: 2 * @g4u-desktop-padding;
         border-radius: 0;
       }
@@ -103,7 +105,9 @@
         padding-top: @g4u-desktop-padding; // hotfix
         padding-bottom: @g4u-desktop-padding; // hotfix
         margin-top: @g4u-desktop-padding;
-        width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
+        //width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
+        left: 0;
+        right: 0;
         padding-left: @g4u-desktop-button-size + 2 * @g4u-desktop-padding;
 
         // styling of active buttons
