--- a/less/layermenu.less
+++ b/less/layermenu.less
@@ -12,7 +12,7 @@
     background: @g4u-control-background;
 
     button {
-      width: @g4u-layermenu-width + @g4u-desktop-padding;
+      width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
 
       &:focus {
         .g4u-symbol-colors;
