added file-loader via webpack config

--- a/less/attribution.less
+++ b/less/attribution.less
@@ -4,8 +4,8 @@
 @import "./tooltip";
 @import "./misc";
 
-@g4u-attribution-collapse-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/expand-outline-left.svg");
-@g4u-attribution-info-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/info.svg");
+@g4u-attribution-collapse-icon: url("../images/icons/expand-outline-left.svg");
+@g4u-attribution-info-icon: url("../images/icons/info.svg");
 
 .g4u-desktop {
   .g4u-attribution {
