--- a/less/infobutton.less
+++ b/less/infobutton.less
@@ -2,7 +2,7 @@
 @import "./buttons";
 @import "./colors";
 
-@g4u-info-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/info.svg");
+@g4u-info-icon: url("../images/icons/info.svg");
 
 .g4u-infobutton-attributions {
   button {
