--- a/less/layermenu.less
+++ b/less/layermenu.less
@@ -2,7 +2,7 @@
 @import "./colors";
 @import "./buttons";
 
-@g4u-layers-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/layers.svg");
+@g4u-layers-icon: url("../images/icons/layers.svg");
 
 .g4u-desktop {
   .g4u-layermenu {
