--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -2,14 +2,14 @@
 @import "./colors";
 @import "./buttons";
 
-@g4u-layerselector-menu-collapsed-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-plus.svg");
-@g4u-layerselector-menu-expanded-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-minus.svg");
-@g4u-layerselector-group-collapsed-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/expand-outline-down.svg");
-@g4u-layerselector-group-expanded-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/expand-outline-right.svg");
-@g4u-layerselector-info: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/info-circle.svg");
-@g4u-layerselector-info-green: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/info-circle-green.svg");
-@g4u-whitespace-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-nothing.svg");
-@g4u-load-animation: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/load-animation.svg");
+@g4u-layerselector-menu-collapsed-icon: url("../images/icons/plusminus-plus.svg");
+@g4u-layerselector-menu-expanded-icon: url("../images/icons/plusminus-minus.svg");
+@g4u-layerselector-group-collapsed-icon: url("../images/icons/expand-outline-down.svg");
+@g4u-layerselector-group-expanded-icon: url("../images/icons/expand-outline-right.svg");
+@g4u-layerselector-info: url("../images/icons/info-circle.svg");
+@g4u-layerselector-info-green: url("../images/icons/info-circle-green.svg");
+@g4u-whitespace-icon: url("../images/icons/plusminus-nothing.svg");
+@g4u-load-animation: url("../images/icons/load-animation.svg");
 
 .g4u-desktop {
   .g4u-layerselector.ol-unselectable.ol-control {
