--- a/less/mobilecontrols.less
+++ b/less/mobilecontrols.less
@@ -9,8 +9,8 @@
 }
 
 .g4u-mobile {
-  @g4u-arrowbutton-left-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/arrow-left.svg");
-  @g4u-arrowbutton-right-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/arrow-right.svg");
+  @g4u-arrowbutton-left-icon: url("../images/icons/arrow-left.svg");
+  @g4u-arrowbutton-right-icon: url("../images/icons/arrow-right.svg");
 
   .g4u-mobilecontrols {
     bottom: 2 * @g4u-mobile-padding;
