--- a/less/singledrawbutton.less
+++ b/less/singledrawbutton.less
@@ -2,7 +2,7 @@
 @import "./colors";
 @import "./buttons";
 
-@g4u-pencil-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/pencil.svg");
+@g4u-pencil-icon: url("../images/icons/pencil.svg");
 
 .g4u-desktop .g4u-single-draw .g4u-control-mainbutton {
   .buttonSquaredWithIcon(@g4u-pencil-icon; @g4u-desktop-button-size; @g4u-desktop-huge-fontsize);
