--- a/less/zoom.less
+++ b/less/zoom.less
@@ -3,8 +3,8 @@
 @import "./buttons";
 @import "./misc";
 
-@g4u-zoom-in-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-plus.svg");
-@g4u-zoom-out-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/plusminus-minus.svg");
+@g4u-zoom-in-icon: url("../images/icons/plusminus-plus.svg");
+@g4u-zoom-out-icon: url("../images/icons/plusminus-minus.svg");
 
 .g4u-desktop {
   .g4u-zoom {
