--- a/less/colors.less
+++ b/less/colors.less
@@ -1,4 +1,4 @@
-﻿@import "~lessConfig";
+﻿@import "~config.less";
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 //
