--- a/less/geolocation.less
+++ b/less/geolocation.less
@@ -2,8 +2,8 @@
 @import "./buttons";
 @import "./colors";
 
-@g4u-geolocation-icon-active: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/geolocation-active.svg");
-@g4u-geolocation-icon-inactive: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/geolocation-inactive.svg");
+@g4u-geolocation-icon-active: url("../images/icons/geolocation-active.svg");
+@g4u-geolocation-icon-inactive: url("../images/icons/geolocation-inactive.svg");
 
 .g4u-desktop {
   .g4u-geolocation {
