--- a/less/printbutton.less
+++ b/less/printbutton.less
@@ -2,8 +2,8 @@
 @import "./colors";
 @import "./buttons";
 
-@g4u-printbutton-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/print2.svg");
-@g4u-printbutton-blinking-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/icons/print-animation.svg");
+@g4u-printbutton-icon: url("../images/icons/print2.svg");
+@g4u-printbutton-blinking-icon: url("../images/icons/print-animation.svg");
 
 .g4u-desktop {
   .g4u-printbutton.g4u-control-mainbutton {
