--- a/less/searchcontrol.less
+++ b/less/searchcontrol.less
@@ -2,7 +2,7 @@
 @import "~guide4you/less/controlgenerics";
 @import "~guide4you/less/colors";
 
-@g4u-search-icon: url("~file-loader?name=images/[name].[ext]!mustache-loader!../images/search.svg");
+@g4u-search-icon: url("../images/search.svg");
 
 .g4u-desktop {
   .g4u-search-control-searchbutton {
