added minZoom and maxZoom for layers

--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -122,6 +122,11 @@
             content: @g4u-load-animation;
           }
         }
+
+        &.g4u-layerselector-disabled {
+          background: fade(@g4u-disabled-color, @g4u-not-so-opaque);
+          pointer-events: none;
+        }
       }
 
       // indenting
