adjusted print & added help-header

--- a/less/print.less
+++ b/less/print.less
@@ -66,7 +66,7 @@
     }
 
     .g4u-scale-line {
-      bottom: 5 * @g4u-desktop-padding + @g4u-desktop-button-size !important;
+      bottom: 3 * @g4u-desktop-padding !important;
       border: none;
       background: white !important;
 
