featurepopup img loading

--- a/conf/clouds.less
+++ b/conf/clouds.less
@@ -25,3 +25,10 @@
 @g4u-link-color: lighten(@g4u-medium-main-color, 10%);
 
 @g4u-text-color: white;
+
+// translucencies
+
+@g4u-semitransparent: 30%;
+@g4u-not-so-opaque: 70%;
+@g4u-rather-opaque: 80%;
+@g4u-very-opaque: 88%;
