--- a/conf/clouds.less
+++ b/conf/clouds.less
@@ -24,6 +24,8 @@
 
 @g4u-link-color: lighten(@g4u-medium-main-color, 10%);
 
+@g4u-disabled-color: rgb(120, 120, 120);
+
 @g4u-text-color: white;
 
 // translucencies
